--- a/views/index.jade
+++ b/views/index.jade
@@ -8,10 +8,20 @@ html(lang="en")
     meta(name='author', content='')
     link(rel='icon', href='../../favicon.ico')
     title Amphistaff
-    // Bootstrap core CSS
     link(href='/css/bootstrap.min.css', rel='stylesheet')
     link(href='/css/app.css', rel='stylesheet')
+    script(src='/js/jquery.min.js')
     script(src='/js/bootstrap.min.js')
+    script(src='/socket.io/socket.io.js')
+    script(type='text/javascript').
+      $(function(){
+        console.log('init');
+        var socket = io.connect('http://localhost');
+        socket.on('response', function (data) {
+          console.log(data);
+          $('.well.response').text(JSON.stringify(data, null, 2));
+        });
+      });
   body
     nav.navbar.navbar-inverse.navbar-fixed-top
       .container
@@ -38,4 +48,4 @@ html(lang="en")
         .col-lg-6
           .page-header
             h4 Response
-          .well.response
+          pre.well.response
